2007-08-02  Sancho Lerena  <slerena@gmail.com>

	* Final changes (link is now over bin, and lib is real dir, for work
	with Makefile.PL).

	* lib: Linked to bin/PandoraFMS, for use in Makefile.PL

	* Makefile.PL: Perl standard interface for make (to install)

	* bin/pandora_db.pl: Some small fixes and information strings updated.

2007-07-31  Sancho Lerena  <slerena@gmail.com>

        * util/snmptrapd: Deleted binary.

        * pandora_snmpconsole: Fixed startup scripts. Many checks added to
        manage NetSNMP Trap daemon. Now uses /usr/sbin/snmptrapd by
        default. Solved many problems. This also solve bug #1763691.

        * conf/pandora_server.conf: Added snmp_logfile token (before
        inside CODE!, UGLY!).

        * bin/pandora_network.pl: I hope Fixed BUG #1763305 with Master Server.

        * bin/PandoraFMS/Config.pm: Support for config token snmp_logfile.

        * bin/PandoraFMS/DB.pm: Fixed (stupid) BUG #1763304 with alerts.

        * bin/pandora_snmpconsole.pl: Removed logfile filename from code
        (VERY ugly!).

        * pandora_server, pandora_network, pandora_recon: This also solve
        bug #1763691. Some additional checks included.

        * util/pandora_SNMP_test.pl: Removed, old stuff.

2007-07-20 Sancho Lerena  <slerena@artica.es>

	* pandora_network.pl: Fixed a typo in pandora_ping_latency function.

2007-07-19  Sancho Lerena  <slerena@artica.es>

	* bin/pandora_DBI_test.pl: This is in /util and shound not be there.

	* pandora_network.pl: Added concurrency locking for ICMP and
	removed previos method (repeating tests). This sould work fine and
	faster. ICMP Latency added as independent function. This sould go
	on a new library for 1.4 or 2.0 version. Removed some debug
	commented code.

2007-07-18  Sancho Lerena  <slerena@artica.es>

	* pandora_network.pl: BugFix: SNMP calls that was causing segfauls was
 	because NetSNMP (SNMP) library is not thread safe !. Simple locking