@@ -6,9 +6,10 @@
 # v1.3 Build 070731
 
 # Configurable path and filenames
-PANDORA_HOME="/usr/share/pandora_server"
+PANDORA_HOME="/etc/pandora"
 PANDORA_PID_PATH="/var/run/pandora"
 PANDORA_PID=$PANDORA_PID_PATH/pandora_network.pid
+PANDORA_DAEMON=/usr/bin/pandora_network.pl
 
 # Main script
 
@@ -18,7 +19,7 @@ then
 	exit
 fi
 
-if [ ! -f $PANDORA_HOME/bin/pandora_network.pl ]
+if [ ! -f $PANDORA_DAEMON ]
 then
         echo "Pandora FMS Network Server not found, please check setup and read manual"
         exit
@@ -38,10 +39,10 @@ case "$1" in
 		fi
 	fi
 	
-	cd $PANDORA_HOME/bin
-	./pandora_network.pl $PANDORA_HOME -D
+	$PANDORA_DAEMON $PANDORA_HOME -D
+	sleep 1
 
-	MYPID=`ps aux | grep 'pandora_network.pl' | grep -v grep | tail -1 | awk '{print $2}'`
+	MYPID=`ps aux | grep 'pandora_network' | grep -v grep | tail -1 | awk '{print $2}'`
 	if [ ! -z "$MYPID" ]
 	then
 		echo $MYPID > $PANDORA_PID
