@@ -3,12 +3,13 @@
 # Pandora Data Server, startup script
 # Sancho Lerena, <slerena@gmail.com>
 # Linux Version (generico)
-# v1.3 Build 070731
+# v1.3 Build 070802
 
 # Configurable path and filenames
-PANDORA_HOME="/usr/share/pandora_server"
+PANDORA_HOME="/etc/pandora"
 PANDORA_PID_PATH="/var/run/pandora"
 PANDORA_PID=$PANDORA_PID_PATH/pandora_dataserver.pid
+PANDORA_DAEMON=/usr/bin/pandora_server
 
 # Main script
 
@@ -18,7 +19,7 @@ then
 	exit
 fi
 
-if [ ! -f $PANDORA_HOME/bin/pandora_server.pl ]
+if [ ! -f $PANDORA_DAEMON ]
 then
         echo "Pandora FMS Data Server not found, please check setup and read manual"
         exit
@@ -30,7 +31,7 @@ case "$1" in
 	if [ -f $PANDORA_PID ]
 	then
 		CHECK_PID=`cat $PANDORA_PID`
-		CHECK_PID_RESULT=`ps aux | grep -v grep | grep "$CHECK_PID" | grep "pandora_server.pl" | wc -l`
+		CHECK_PID_RESULT=`ps aux | grep -v grep | grep "$CHECK_PID" | grep "pandora_server" | wc -l`
 		if [ $CHECK_PID_RESULT == 1 ]
 		then
 			echo "Pandora FMS Data Server is currently running on this machine with PID ($CHECK_PID). Aborting now..."
@@ -38,10 +39,10 @@ case "$1" in
 		fi
 	fi
 	
-	cd $PANDORA_HOME/bin
-	./pandora_server.pl $PANDORA_HOME -D
+	$PANDORA_DAEMON $PANDORA_HOME -D
+	sleep 1
 
-	MYPID=`ps aux | grep 'pandora_server.pl' | grep -v grep | tail -1 | awk '{print $2}'`
+	MYPID=`ps aux | grep 'pandora_server' | grep -v grep | tail -1 | awk '{print $2}'`
 	if [ ! -z "$MYPID" ]
 	then
 		echo $MYPID > $PANDORA_PID
