@@ -3,15 +3,16 @@
 # Startup script for Pandora SNMP Console
 # Sancho Lerena, <slerena@gmail.com>
 # Linux Version (generic)
-# v1.3 BUILD 070731 
+# v1.3 BUILD 070802
 
 # Compatible with NetSNMP 5.1 or higher
 
 # Configurable path and filenames
 
-PANDORA_HOME="/usr/share/pandora_server"
+PANDORA_HOME="/etc/pandora"
 PANDORA_PID_PATH="/var/run/pandora"
 PANDORA_PID=$PANDORA_PID_PATH/pandora_snmp.pid
+PANDORA_DAEMON=/usr/bin/pandora_snmpconsole
 
 DAEMON_LOG="/var/log/pandora/pandora_snmptrap.log"
 DAEMON_PID="$PANDORA_PID_PATH/pandora_snmptrapd.pid"
@@ -90,7 +91,7 @@ case "$1" in
 	if [ -f $PANDORA_PID ]
         then
                 CHECK_PID=`cat $PANDORA_PID`
-                CHECK_PID_RESULT=`ps aux | grep -v grep | grep "$CHECK_PID" | grep "pandora_snmpconsole.pl" | wc -l`
+                CHECK_PID_RESULT=`ps aux | grep -v grep | grep "$CHECK_PID" | grep "pandora_snmpconsole" | wc -l`
                 if [ $CHECK_PID_RESULT == 1 ]
                 then
                         echo "Pandora FMS SNMP Server is currently running on this machine with PID ($CHECK_PID). Aborting now..."
@@ -98,10 +99,10 @@ case "$1" in
                 fi
         fi
 
-	cd $PANDORA_HOME/bin
-	./pandora_snmpconsole.pl $PANDORA_HOME -D
+	$PANDORA_DAEMON $PANDORA_HOME -D
+	sleep 1
 
-	MYPID=`ps aux | grep 'pandora_snmpconsole.pl' | grep -v grep | tail -1 | awk '{print $2}'`
+	MYPID=`ps aux | grep 'pandora_snmpconsole' | grep -v grep | tail -1 | awk '{print $2}'`
 	if [ ! -z "$MYPID" ]
 	then
 		echo $MYPID > $PANDORA_PID
